--- a/signin/index.html
+++ b/signin/index.html
@@ -1,42 +1,52 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8"/>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Starbucks Coffee Korea</title>
-    <meta property="og:type" content="website"/>
-    <meta property="og:site_name" content="Starbucks"/>
-    <meta property="og:title" content="Starbucks Coffee Korea"/>
-    <meta property="og:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다."/>
-    <meta property="og:image" content="./images/starbucks_seo.jpg"/>
-    <meta property="og:url" content="https://starbucks.co.kr"/>
 
-    <meta property="twitter:card" content="summary"/>
-    <meta property="twitter:site" content="Starbucks"/>
-    <meta property="twitter:title" content="Starbucks Coffee Korea"/>
-    <meta property="twitter:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다."/>
-    <meta property="twitter:image" content="./images/starbucks_seo.jpg"/>
-    <meta property="twitter:url" content="https://starbucks.co.kr"/>
+    <!--Open Graph-->
+    <!--http://ogp.me/-->
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Starbucks" />
+    <meta property="og:title" content="Starbucks Coffee Korea" />
+    <meta property="og:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
+    <meta property="og:image" content="../images/starbucks_seo.jpg" />
+    <meta property="og:url" content="https://starbucks.co.kr" />
 
-    <link rel="icon" href="../favicon.png"/>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet"/>
-    <link rel="stylesheet" href="https://unpkg.com/swiper@6.8.4/swiper-bundle.min.css"/>
+    <!--Twitter Card-->
+    <!--https://developer.twitter.com/en/docs/twitter-for-websites/cards/guides/getting-started-->
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:site" content="Starbucks" />
+    <meta property="twitter:title" content="Starbucks Coffee Korea" />
+    <meta property="twitter:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로, 64개국에서 총 23,187개의 매점을 운영하고 있습니다." />
+    <meta property="twitter:image" content="../images/starbucks_seo.jpg" />
+    <meta property="twitter:url" content="https://starbucks.co.kr" />
+
+    <!--파비콘-->
+    <link rel="icon" href="../favicon.png" />
+    <!--브라우저 스타일 초기화-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
+    <!--Google Fonts - 나눔고딕-->
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet" />
+    <!--Google Material Icons-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
 
     <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/signin.css" />
 
     <script defer src="../js/common.js"></script>
 </head>
 <body>
 
-<!-- HEADER -->
+<!--HEADER-->
 <header>
     <div class="inner">
 
         <a href="/" class="logo">
-            <img src="../images/starbucks_logo.png" alt="STARBUCKS"/>
+            <img src="../images/starbucks_logo.png" alt="STARBUCKS" />
         </a>
 
         <div class="sub-menu">
@@ -55,7 +65,7 @@
                 </li>
             </ul>
             <div class="search">
-                <input type="text"/>
+                <input type="text" />
                 <span class="material-icons">search</span>
             </div>
         </div>
@@ -358,16 +368,39 @@
                 </div>
             </li>
         </ul>
+
     </div>
 </header>
 
-<section class="signin">
 
+<section class="signin">
+    <h1>로그인</h1>
+    <div class="signin__card">
+        <h2>
+            <strong>Welcome!</strong> 스타벅스에 오신 것을 환영합니다.
+        </h2>
+        <form>
+            <input type="text" placeholder="아이디를 입력하세요." />
+            <input type="password" placeholder="비밀번호를 입력하세요." />
+            <input type="submit" value="로그인" />
+            <p>
+                * 비밀번호를 타 사이트와 같이 사용할 경우 도용 위험이 있으니,<br />
+                정기적으로 비밀번호를 변경하세요!
+            </p>
+        </form>
+        <div class="actions">
+            <a href="javascript:void(0)">회원가입</a>
+            <a href="javascript:void(0)">아이디 찾기</a>
+            <a href="javascript:void(0)">비밀번호 찾기</a>
+        </div>
+    </div>
 </section>
 
-<!-- FOOTER -->
+
+<!--FOOTER-->
 <footer>
     <div class="inner">
+
         <ul class="menu">
             <li><a href="javascript:void(0)" class="green">개인정보처리방침</a></li>
             <li><a href="javascript:void(0)">영상정보처리기기 운영관리 방침</a></li>
@@ -377,10 +410,9 @@
             <li><a href="javascript:void(0)">윤리경영 핫라인</a></li>
         </ul>
 
-
-        <div class="div btn-group">
+        <div class="btn-group">
             <a href="javascript:void(0)" class="btn btn--white">찾아오시는 길</a>
-            <a href="javascript:void(0)" class="btn btn--white">신규입점 제의</a>
+            <a href="javascript:void(0)" class="btn btn--white">신규입점제의</a>
             <a href="javascript:void(0)" class="btn btn--white">사이트 맵</a>
         </div>
 
@@ -389,20 +421,15 @@
             <span>(주)스타벅스 코리아 대표이사 이석구</span>
             <span>TEL : 02) 3015-1100 / FAX : 02) 3015-1106</span>
             <span>개인정보 책임자 : 강기원</span>
-            <p class="copyright">
-                &copy; <span class="this-year"></span> Starbucks Coffee Company. All Rights Reserved.
-            </p>
-            <img src="../images/starbucks_logo_only_text.png" alt="STAR BUCKS" class="logo"/>
-
         </div>
+
+        <p class="copyright">
+            &copy; <span class="this-year"></span> Starbucks Coffee Company. All Rights Reserved.
+        </p>
+        <img src="../images/starbucks_logo_only_text.png" alt="STAR BUCKS" class="logo" />
+
     </div>
-
 </footer>
-
-<!-- TO TOP -->
-<div id="to-top">
-    <div class="material-icons">arrow_upward</div>
-</div>
 
 </body>
 </html>
